--- a/src/pages/Dashboard.css
+++ b/src/pages/Dashboard.css
@@ -3,3 +3,14 @@
   top: 50px !important;
   left: -100px !important;
 }
+
+.online-indicator {
+  width: 15px;
+  height: 15px;
+  border: 2px solid #fff;
+  border-radius: 50%;
+  background-color: #11a11182;
+  position: absolute;
+  bottom: 0;
+  right: -5px;
+}
